Tweak URL schemes

--- a/content/posts/2017-12-28_My-2017-in-reading.md
+++ b/content/posts/2017-12-28_My-2017-in-reading.md
@@ -6,7 +6,7 @@ keywords: 'reading'
 
 ---
 
-It’s been a while since I’ve done one of these posts — [three years](http://benscofield.com/my-2014-in-reading/), to be exact — but I had a few goals going into this year that I wanted to look back on.
+It’s been a while since I’ve done one of these posts — [three years](//benscofield.com/my-2014-in-reading/), to be exact — but I had a few goals going into this year that I wanted to look back on.
 
 ### Goals
 
