--- a/content/posts/2017-12-30_My-2017-in-podcasts.md
+++ b/content/posts/2017-12-30_My-2017-in-podcasts.md
@@ -26,7 +26,7 @@ The podcasts I listened to ranged over a wide set of genres, but there were some
 
 I loved … too many shows this past year (see that top line listened number for proof). I’m going to limit this list to just a few, though.
 
-*   The [Campaign podcast](http://oneshotpodcast.com/category/podcasts/campaign/) is now and will forever hold the top spot on my list of favorite podcasts. It’s an actual play RPG set in the Star Wars universe (prior to A New Hope), following a crew of lovable, often-incompetent, and deeply realized misfits who are raising a Force-sensitive child while trying to get top-secret plans for something they call the Murderball to the nascent Rebellion.
+*   The [Campaign podcast](//oneshotpodcast.com/category/podcasts/campaign/) is now and will forever hold the top spot on my list of favorite podcasts. It’s an actual play RPG set in the Star Wars universe (prior to A New Hope), following a crew of lovable, often-incompetent, and deeply realized misfits who are raising a Force-sensitive child while trying to get top-secret plans for something they call the Murderball to the nascent Rebellion.
 *   [Pod Save America](https://crooked.com/podcast-series/pod-save-america/) is my go-to when I’m feeling overwhelmed by the state of the country. It’s got the absolute best ad reads, along with great interviews and insights from a group of former Obama staffers.
 *   I ran across Buffy the Vampire Slayer when I was in college, and I watched it loyally for years to follow. I don’t know if I got as much enjoyment out of it then as I do now when listening to [Buffering the Vampire Slayer](https://www.bufferingthevampireslayer.com/), though, which gives me a whole new perspective on a show that I’m really attached to.
 *   [Very Bad Wizards](https://verybadwizards.fireside.fm/) is a collaboration between a philosopher and a psychologist; they talk about everything from moral philosophy, to the current state of research on general intelligence in psychology, to the rationality of using a Star Trek-style transporter, and I love it.
